--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": "*",
+        "sjaakp/yii2-helpers": "*"
     },
     "autoload": {
         "psr-4": {
